frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,body{
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
  font-family: 'Gilroy', sans-serif;
}

body{
  height: 100%;
  width:100%;
  background-color: #EAEADE;

}

.dark{
  background-color: rgb(24, 24, 27);
}

h1 {
  font-size: 28px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px; /* 28px */
}

h2 {
  font-size: 24px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px; /* 28px */
}

h3 {
  font-size: 20px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px; /* 28px */
}
h4 {
  font-size: 18px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px; /* 28px */
}

h5 {
  font-size: 16px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px;
}
h6 {
  font-size: 14px; /* 20px */
  font-weight: 700;
  margin-top: 12px;
  margin-bottom: 12px;
}

p{
    font-size: 20px;
    font-weight: 500;
    margin-top: 12px;
    margin-bottom: 12px; 
    font-family: "Aeonik", sans-serif;
}

